<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/primary"
            app:title="@string/app_name"
            app:titleTextColor="@color/white" />
        
    </com.google.android.material.appbar.AppBarLayout>
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:padding="24dp">
        
        <Button
            android:id="@+id/btn_start_count"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/start_count"
            android:textSize="18sp"
            android:paddingVertical="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn_history"
            app:layout_constraintVertical_chainStyle="packed" />
        
        <Button
            android:id="@+id/btn_history"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/history"
            android:textSize="18sp"
            android:paddingVertical="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/btn_start_count"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />
        
    </androidx.constraintlayout.widget.ConstraintLayout>
    
</androidx.coordinatorlayout.widget.CoordinatorLayout>